// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render with many props assigned 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchor anchorMargin"
    id="test"
  />
  <div
    className="hashLinkContainer"
  >
    <a
      data-testid="Hash Link"
      href="#test"
    >
      <svg
        className="icon"
      />
      <span
        className="ScreenReaderOnly"
      >
        Scroll Link
      </span>
    </a>
  </div>
  <h2
    className="secondary Heading test-class headingTextWithLinkIconOffset"
  >
    Test
  </h2>
</div>
`;

exports[`Heading should render with required props 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchor anchorMargin"
    id="test"
  />
  <div
    className="hashLinkContainer"
  >
    <a
      data-testid="Hash Link"
      href="#test"
    >
      <svg
        className="icon"
      />
      <span
        className="ScreenReaderOnly"
      >
        Scroll Link
      </span>
    </a>
  </div>
  <h2
    className="secondary Heading undefined headingTextWithLinkIconOffset"
  >
    Test
  </h2>
</div>
`;
